Kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: dev
spec:
  selector:
    app: my-app
  type: NodePort
  ports:
  - ports: 80
    targetPort: 8000
    nodePort: 32200
